# python_project_data_filler

./: .gitignore  LICENSE  README.md  pyproject.toml
proj_builder/: make_py_dir.py
src/proj_builder/: __main__.py  make_py_dir.py
src/proj_builder_nchwomp/: proj_builder.py
