[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "proj_builder_nchwomp"
version = "0.1.0"
authors = [
    { name="Nathan Champion, email="nchampion301@gmail.com" },
]
description "Just a tool that will allow me to fill out the information in these files from a skeleton project."
readme = "README.md"
licence = { file="LICENSE" }
requires-python = ">=$REQ_PYTHON_VERSION$"
classifiers = [
    
]

[project.urls]
"Homepage" = "https://github.com/nathan-champion/python_project_data_filler"
"Bug Tracker" = "https://github.com/nathan-champion/python_project_data_filler/issues"