[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proj_builder"
version = "0.1.0"
authors = [
    { name="Nathan Champion", email="nchampion301@gmail.com" },
]
description = "Just a tool that will allow me to fill out the information in these files from a skeleton project."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
]

[project.scripts]
make_py_dir = "proj_builder.make_py_dir:run"

[project.urls]
"Homepage" = "https://github.com/nathan-champion/python_project_data_filler"
"Bug Tracker" = "https://github.com/nathan-champion/python_project_data_filler/issues"